made some big improvements in code